# c-tutorial

./: CMakeLists.txt  data.txt  main.c
common/: CMakeLists.txt  registry.c
common/adt/: CMakeLists.txt  array_list.c
cpma/: CMakeLists.txt  cpma_main.c  main.c
cpma/advanced_pointers/: inventory.c  project17-5.c
cpma/large_program/: justify.c  line.c  line.h  word.c  word.h
cpma/low_level/: viewmemory.c
cpma/pointers/: CMakeLists.txt  max_min.c  project1.c  project2.c  project3.c  project4.c
cpma/pointers_and_arrays/: CMakeLists.txt  project12-1.c  project12-2.c  project12-5.c  project12-6.c
cpma/strings/: project13-1.c  project13-2.c  project13-3.c  project13-4.c  project13-5.c  project13-6.c  remainder.c
cpma/structures/inventory/: inventory.c  readline.c  readline.h
include/: cpma_main.h  main.h  priority_def.h  registry.h
include/adt/: array_list.h
test/: CMakeLists.txt  testadt.c  testregistry.c
